<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="General Settings"
                    android:textColor="@color/c1"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="4dp"
                    app:cardBackgroundColor="@color/colorCard"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="1dp"
                    app:cardPreventCornerOverlap="false">
                    <LinearLayout
                        android:id="@+id/theme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:minHeight="50dp"
                        android:orientation="horizontal"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp">
                        <TextView
                            android:id="@+id/txtmode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="App Theme"
                            android:textColor="@color/colorText"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                        <View
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                        <ImageView
                            android:id="@+id/mode"
                            android:rotation="180"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_arrow"
                            app:tint="@color/colorText"
                            android:contentDescription="@string/app_name"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="Information"
                    android:textColor="@color/c1"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="4dp"
                    app:cardBackgroundColor="@color/colorCard"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="1dp"
                    app:cardPreventCornerOverlap="false">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/mail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?attr/selectableItemBackground"
                                android:gravity="center|start"
                                android:minHeight="50dp"
                                android:orientation="horizontal"
                                android:paddingLeft="15dp"
                                android:paddingRight="15dp">
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@android:color/transparent"
                                    app:srcCompat="@drawable/ic_baseline_alternate_email_24"
                                    app:tint="@color/colorText"
                                    android:contentDescription="@string/app_name"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:text="@string/email"
                                    android:textColor="@color/colorText"
                                    android:textSize="15sp"
                                    android:textStyle="bold" />
                            </LinearLayout>


                        <LinearLayout
                            android:id="@+id/share"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:gravity="center|start"
                            android:minHeight="50dp"
                            android:orientation="horizontal"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:contentDescription="@string/app_name"
                                app:srcCompat="@drawable/ic_share"
                                app:tint="@color/colorText" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="Share App"
                                android:textColor="@color/colorText"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                            <LinearLayout
                                android:id="@+id/rate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?attr/selectableItemBackground"
                                android:gravity="center|start"
                                android:minHeight="50dp"
                                android:orientation="horizontal"
                                android:paddingLeft="15dp"
                                android:paddingRight="15dp">
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@android:color/transparent"
                                    app:srcCompat="@drawable/ic_outline_rate_review_24"
                                    app:tint="@color/colorText"
                                    android:contentDescription="@string/app_name"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:text="Rate App"
                                    android:textColor="@color/colorText"
                                    android:textSize="15sp"
                                    android:textStyle="bold" />
                            </LinearLayout>
                            <LinearLayout
                                android:id="@+id/policy"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?attr/selectableItemBackground"
                                android:gravity="left|center_vertical|center_horizontal|center|start"
                                android:minHeight="50dp"
                                android:orientation="horizontal"
                                android:paddingLeft="15dp"
                                android:paddingRight="15dp">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@android:color/transparent"
                                    app:srcCompat="@drawable/ic_baseline_policy_24"
                                    app:tint="@color/colorText"
                                    android:contentDescription="@string/app_name"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:text="Privacy Policy"
                                    android:textColor="@color/colorText"
                                    android:textSize="15sp"
                                    android:textStyle="bold" />
                            </LinearLayout>
                            <LinearLayout
                                android:id="@+id/about"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?attr/selectableItemBackground"
                                android:gravity="center|start"
                                android:minHeight="50dp"
                                android:orientation="horizontal"
                                android:paddingLeft="15dp"
                                android:paddingRight="15dp">
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@android:color/transparent"
                                    app:srcCompat="@drawable/ic_outline_info_24"
                                    app:tint="@color/colorText"
                                    android:contentDescription="@string/app_name" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:text="About App"
                                    android:textColor="@color/colorText"
                                    android:textSize="15sp"
                                    android:textStyle="bold" />
                            </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/txtVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/version"
                    android:textColor="@color/colorText"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
